--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,9 +16,18 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "fs-extra": "^9.0.1",
     "mongodb": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ImPias/doctors-portal-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ImPias/doctors-portal-server/issues"
+  },
+  "homepage": "https://github.com/ImPias/doctors-portal-server#readme"
 }
